# sphinx

./: D2_EXAMPLE.rst  all_results.txt  integration_test_result.txt  merger_test_result.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  SUMMARY.md  TESTING.md
.planning/phases/01-core_foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  RESEARCH.md
.planning/phases/02-configuration/: 02-01-PLAN.md  02-01-SUMMARY.md  ADJUSTMENT.md  RESEARCH.md
.planning/phases/03-print_support/: 03-01-PLAN.md  03-01-SUMMARY.md  RESEARCH.md
.planning/phases/04-optimization_polish/: 04-01-PLAN.md  04-01-SUMMARY.md  RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
doc/: conf.py  diagram1.d2  doc1.rst  doc2.rst
sphinxcontrib-d2/: LICENSE  README.rst  pyproject.toml
sphinxcontrib-d2/sphinxcontrib/d2/: __init__.py  merger.py
sphinxcontrib-d2/sphinxcontrib/d2/static/: d2.css  d2.js
sphinxcontrib-d2/tests/: conftest.py  test_basic.py  test_complex.py  test_inline.py  test_merger.py
sphinxcontrib-d2/tests/data/: config.d2  doc1.rst  doc2.rst  doc3.rst  merged1.d2  merged2.d2
sphinxcontrib-d2/tests/roots/test-complex/: conf.py  config.d2  diagram1.d2  index.rst
