[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinxcontrib-d2"
authors = [{name = "Hartmut Obendorf", email = "hartmut.obendorf@canonical.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "sphinx>=5.0",
    "tree-sitter",
    "tree-sitter-d2",
]
requires-python = ">=3.12"

[project.urls]
Home = "https://github.com/sphinx-contrib/d2"
